fixed the positon of the logos carousel to centrally aligned

--- a/src/styles/modules/heroSection.css
+++ b/src/styles/modules/heroSection.css
@@ -83,8 +83,10 @@
 
 .logos-carousel{
     position: relative;
-    /* background: red; */
     inline-size: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     overflow: hidden;
 }
 
